# no-code-chatbot-builder

./: .gitignore  README.md  index.html  types.ts
backend/: .gitignore  README.md  debug_bot.py  main copy.py  main.py  payload.json  pyproject.toml  rag.py  requirements.txt  verify_imports.py  voice_agent.py  workflow_engine.py
backend/generated_docs/: ai.docx  ai_news.docx  ai_tech.docx  data.xlsx  data01_20260310_112600.xlsx  demo.docx  demo1.docx  intern.docx  internship.docx  new.docx  report.docx  report2.docx  test_new_name_123.xlsx
components/: Dashboard.tsx
frontend/: .env  .gitignore  App.tsx  index.html  metadata.json  package-lock.json  package.json
frontend/components/: BuilderSteps.tsx  ChatWidget.tsx
frontend/public/: chat-widget.js
frontend/src/: App.tsx
frontend/src/components/: VoiceChat.tsx
frontend/src/components/layout/: AppLayout.tsx  AuthLayout.tsx
frontend/src/components/ui/: Modal.tsx  Toast.tsx
frontend/src/contexts/: AuthContext.tsx  VoiceContext.tsx
frontend/src/lib/: supabase.ts
frontend/src/pages/agent-builder/: AgentBuilder.tsx
frontend/src/pages/auth/: SignIn.tsx  SignUp.tsx
frontend/src/pages/chat/: ChatPage.tsx  PublicChat.tsx
frontend/src/pages/dashboard/: CreateBot.tsx  Dashboard.tsx  EditBot.tsx  EmbedBot.tsx  TelegramIntegration.tsx  WhatsAppIntegration.tsx
frontend/src/services/: api.ts
services/: geminiService.ts
