[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.0",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastapi",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.45.0",
    "google-auth-oauthlib>=1.2.2",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "langchain",
    "langchain-chroma",
    "langchain-classic>=1.0.1",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-huggingface",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.5",
    "livekit-agents[openai,sarvam,silero]>=1.4.1",
    "livekit-api>=1.1.0",
    "livekit-plugins-openai>=1.4.1",
    "livekit-plugins-sarvam>=1.4.1",
    "livekit-plugins-silero>=1.4.1",
    "mcp>=1.26.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.0",
    "open-clip-torch>=3.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic",
    "pymupdf>=1.27.1",
    "pypdf>=6.6.2",
    "python-docx>=1.2.0",
    "python-dotenv",
    "python-multipart>=0.0.21",
    "sentence-transformers",
    "supabase",
    "tavily-python>=0.7.19",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "twilio>=9.10.1",
    "uvicorn",
]
